@@ -1,0 +1,5 @@
+Any time-dependent amplitude wrapper potential
+===============================================
+
+.. autoclass:: galpy.potential.TimeDependentAmplitudeWrapperPotential
+   :members: __init__
