@@ -344,6 +344,19 @@ def _parse_pot(pot):
               or isinstance(p,potential.RotateAndTiltWrapperPotential): # pragma: no cover
             raise NotImplementedError('Planar orbit integration in C for RotateAndTiltWrapperPotential not implemented; please integrate an orbit with (z,vz) = (0,0) instead')
             # Note that potential.RotateAndTiltWrapperPotential would be -8
+        elif ((isinstance(p,planarPotentialFromFullPotential) or isinstance(p,planarPotentialFromRZPotential)) \
+              and isinstance(p._Pot,potential.TimeDependentAmplitudeWrapperPotential)) \
+              or isinstance(p,potential.TimeDependentAmplitudeWrapperPotential):
+            if not isinstance(p,potential.TimeDependentAmplitudeWrapperPotential):
+                p= p._Pot
+            pot_type.append(-9)
+            # wrap_pot_type, args, and npot obtained before this horrible if
+            pot_args.append(wrap_npot)
+            pot_type.extend(wrap_pot_type)
+            pot_args.extend(wrap_pot_args)
+            pot_tfuncs.extend(wrap_pot_tfuncs)
+            pot_args.append(p._amp)
+            pot_tfuncs.append(p._A)
     pot_type= numpy.array(pot_type,dtype=numpy.int32,order='C')
     pot_args= numpy.array(pot_args,dtype=numpy.float64,order='C')
     return (npot,pot_type,pot_args,pot_tfuncs)
